[package]
name = "tuic-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["ring"]
ring = ["tuic-core/ring", "rustls/ring", "tuic-client/ring", "tuic-server/ring"]
deplog = ["tracing-test/no-env-filter"]

[dependencies]
# Core dependencies for integration tests
tuic-core = { path = "../tuic-core", default-features = false, features = ["async_marshal", "marshal", "model"] }
tuic-client = { path = "../tuic-client", default-features = false }
tuic-server = { path = "../tuic-server", default-features = false }

# Required dependencies
uuid = { version = "1", features = ["v4", "serde", "std"] }
tokio = { version = "1", features = ["full"] }
json5 = { version = "1.3" }
lexopt = { version = "0.3" }
eyre = { version = "0.6" }
fast-socks5 = { version = "1" }
rustls = { version = "0.23", default-features = false }
tracing-test = { version = "0.2" }
tracing = "0.1"
tracing-subscriber = "0.3"
serial_test = "3"